--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@ html, body {
   min-height: 100%;
 }
 body {
-  background: radial-gradient(at top left, rgba(146,43,225,1) 0%, rgba(43,9,107,1) 100%);
+  background: radial-gradient(at top left, rgb(11, 250, 31) 0%, rgba(43,9,107,1) 100%);
   background-repeat: no-repeat;
 }
 p {
